layout bug due to new richfaces version fixed

--- a/trunk/el4j/sandbox/seam-demo/war/src/main/webapp/stylesheet/theme.css
+++ b/trunk/el4j/sandbox/seam-demo/war/src/main/webapp/stylesheet/theme.css
@@ -1,3 +1,7 @@
+.rich-stglpanel-body {
+overflow: auto;
+} 
+
 a:active, a:link, a:visited {
 	color: #0D5798;    
 }
